navLinks right spacing repaired

--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -57,7 +57,7 @@ header {
   display: none;
   position: absolute;
   top: 7rem;
-  right: $mg-2;
+  right: 6%;
   z-index: $z-modal;
 
   text-align: center;
